--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -16,6 +16,8 @@
         <p><audio controls> 
             <source src="Brooklyn Ave NE.m4a" type="audio/mpeg">
         </audio></p>
+        <h2>Google Maps example</h2>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d43004.03442335785!2d-122.33835208237235!3d47.65038298370029!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549014ead43fd253%3A0x80898850d1fe857a!2sUniversity%20of%20Washington%20Seattle%20Campus%20-%20Dempsey%20Indoor%20Center!5e0!3m2!1sen!2sus!4v1633558509786!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         <h2>Image</h2>
         <p><object data="elephant1.jpg" width="400" height="300"></object></p>
         <h2>RSS file displayed</h2>
